dxDataGrid: preventing a groupPanel text's overlapping by the other toolbar elements (T462998)

--- a/styles/widgets/android5/dataGrid.android5.less
+++ b/styles/widgets/android5/dataGrid.android5.less
@@ -59,6 +59,10 @@
         }
     }
 
+    .dx-datagrid-group-panel {
+        font-size: @ANDROID5_BASE_FONT_SIZE;
+    }
+
     .dx-menu-base {
         .dx-menu-item {
             .dx-menu-item-content {
