--- a/styles/widgets/ios7/common.ios7.less
+++ b/styles/widgets/ios7/common.ios7.less
@@ -1,3 +1,5 @@
+@IOS7_BASE_FONT_SIZE: 1em;
+
 .dx-theme-marker {
     font-family: @IOS7_THEME_MARKER;
 }
@@ -5,7 +7,7 @@
 .dx-base-typography() {
     color: @IOS7_FONT_COLOR;
     font-weight: normal;
-    font-size: 1em;
+    font-size: @IOS7_BASE_FONT_SIZE;
     font-family: @IOS7_FONT;
 
     a {
